WebCore/html/canvas/CanvasPixelArray.h
@@ -48,10 +48,20 @@ namespace WebCore {
         {
             m_data->set(index, value);
         }
+
+        void set(unsigned index, unsigned char value)
+        {
+            m_data->set(index, value);
+        }
         
         bool get(unsigned index, unsigned char& result) const
         {
             return m_data->get(index, result);
+        }
+
+        unsigned char get(unsigned index) const
+        {
+            return m_data->get(index);
         }
 
     private:
